# higai3

./: .gitignore  CMakeLists.txt  FORMAT_SPEC  README.md  example.data  newrun.py  run.py  short_log.txt  smallnet.nnet  t.txt  trainingdata.trn
dat/: kaffe.trn  smallnet.nnet  xor.trn
src/: autodia.out.dia  controller.cpp  controller.h  imageparser.cpp  imageparser.h  layer.cpp  layer.h  main.cpp  netparser.cpp  netparser.h  neuron.cpp  neuron.h  nnet.cpp  nnet.h  trainingdata.cpp  trainingdata.h  trainingparser.cpp  trainingparser.h  types.h  util.cpp  util.h
